trying everything possible to get libratbag & piper to work

--- a/src/configs/logid/logid.cfg
+++ b/src/configs/logid/logid.cfg
@@ -29,7 +29,10 @@ devices: (
           action =
           {
             type: "Keypress";
-            keys: ["KEY_VOLUMEUP"];
+            keys: [
+              # "XF86AudioRaiseVolume",
+              "KEY_VOLUMEUP"
+            ];
           };
         },
         {
